added taxes & countries & companies
