# app/Http/Controllers/Api/Taxes/TaxController.php
@@ -1,0 +1,220 @@
+<?php
+
+namespace App\Http\Controllers\Api\Taxes;
+
+use App\Http\Resources\Api\Taxes\TaxResource;
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use App\Models\Tax;
+use Exception;
+
+class TaxController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     path="/api/taxes",
+     *     summary="Get list of Taxes",
+     *     tags = {"Taxes"},
+     *     @OA\Parameter(
+     *         description="Localization",
+     *         in="header",
+     *         name="X-Localization",
+     *         required=false,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="ru", value="ru", summary="Russian")
+     *    ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="SUCCESS",
+     *     ),
+     * )
+    */
+    public function index()
+    {
+        try{
+            $taxes = Tax::orderBy('created_at', 'desc')->get();
+            return TaxResource::collection($taxes);
+        }catch(Exception $exception){
+            return response()->json(['error' => $exception->getMessage()], 500);
+        }
+    }
+
+    /**
+     * Show the form for creating a new resource.
+     */
+    public function create()
+    {
+        //
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/taxes",
+     *     summary="Store Tax",
+     *     tags = {"Taxes"},
+     *      @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string",
+     *                     example="ОСНО"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         description="Localization",
+     *         in="header",
+     *         name="X-Localization",
+     *         required=false,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="ru", value="ru", summary="Russian")
+     *    ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="SUCCESS",
+     *     ),
+     * )
+     */
+    public function store(Request $request)
+    {
+        try{
+            $tax = new Tax;
+            $tax->setTranslation('name', 'ru', $request->name)->save();
+            return TaxResource::make($tax);
+        }catch(Exception $exception){
+            return response()->json(['error' => $exception->getMessage()], 500);
+        }
+    }
+
+    /**
+    * @OA\Get(
+    *      path="/api/taxes/{id}",
+    *      summary="Show Tax",
+    *      tags={"Taxes"},
+    *      description="Show Tax",
+    *      @OA\Parameter(
+    *      name="id",
+    *      in="path",
+    *      required=true,
+    *      @OA\Schema(
+    *           type="integer",
+    *           example="1"
+    *         )
+    *      ),
+    *     @OA\Parameter(
+     *         description="Localization",
+     *         in="header",
+     *         name="X-Localization",
+     *         required=false,
+     *         @OA\Schema(type="string"),
+     *         @OA\Examples(example="ru", value="ru", summary="Russian")
+     *    ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="SUCCESS",
+    *     ),
+    *     )
+    */
+    public function show(Tax $tax)
+    {
+        try{
+            return TaxResource::make($tax);
+        }catch(Exception $exception){
+            return response()->json(['error' => $exception->getMessage()], 500);
+        }
+
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     */
+    public function edit(Tax $tax)
+    {
+        //
+    }
+
+     /**
+    * @OA\Put(
+    *      path="/api/taxes/{id}",
+    *      operationId="Update Tax",
+    *      tags={"Taxes"},
+    *      summary="Update Tax",
+    *      description="Update Tax",
+    *      @OA\RequestBody(
+    *         @OA\MediaType(
+    *             mediaType="application/json",
+    *             @OA\Schema(
+    *                 @OA\Property(
+    *                     property="name",
+    *                     type="string",
+    *                     example="UpdateTax"
+    *                 ),
+    *             )
+    *         )
+    *     ),
+    *     @OA\Parameter(
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         @OA\Schema(type="integer", example="1"),
+    *     ),
+    *     @OA\Parameter(
+    *         description="Localization",
+    *         in="header",
+    *         name="X-Localization",
+    *         required=false,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="ru", value="ru", summary="Russian")
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="SUCCESS",
+    *     ),
+    *   )
+    */
+    public function update(Request $request, Tax $tax)
+    {
+        try{
+            $input = $request->all();
+            $tax->fill($input)->save();
+            return TaxResource::make($tax);
+        }catch(Exception $exception){
+            return response()->json(['error' => $exception->getMessage()], 500);
+        }
+    }
+
+    /**
+    * @OA\Delete(
+    *      path="/api/taxes/{id}",
+    *      operationId="Delete Tax",
+    *      tags={"Taxes"},
+    *      summary="Summary",
+    *      description="Taxes",
+    *      @OA\Parameter(
+    *      name="id",
+    *      in="path",
+    *      required=true,
+    *      @OA\Schema(
+    *           type="integer",
+    *           example="1"
+    *         )
+    *      ),
+    *      @OA\Response(
+    *          response=200,
+    *          description="SUCCESS",
+    *       ),
+    *     )
+    */
+    public function destroy(Tax $tax)
+    {
+        try{
+            $tax->delete();
+            return response()->json(['success' => true ]);
+        }catch(Exception $exception){
+            return response()->json(['error' => $exception->getMessage()], 500);
+        }
+    }
+}
