# app/Http/Resources/Api/Countries/CountryResource.php
@@ -1,11 +1,11 @@
 <?php
 
-namespace App\Http\Resources;
+namespace App\Http\Resources\Api\Countries;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class UserResource extends JsonResource
+class CountryResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -15,9 +15,8 @@ class UserResource extends JsonResource
     public function toArray(Request $request): array
     {
       return [
-          'id' => $this->id,
-          'name' => $this->name,
-          'email' => $this->email,
+        'id' => $this->id,
+        'name' => $this->getTranslation('name', app()->getLocale()),
       ];
     }
 }
