# app/Models/Company.php
@@ -11,9 +11,44 @@ class Company extends Model
 
   protected $table = 'companies';
 
-  protected $fillable = ['iin', 'user_id', 'phone', 'email', 'first_name', 'last_name', 'company_reg_date'];
+  protected $fillable = [
+    'iin',
+    'kpp',
+    'ogrn',
+    'phone',
+    'email',
+    'short_name',
+    'full_name',
+    'link',
+    'company_reg_date',
+    'edo_provider',
+    'edo_id',
+    'user_id',
+    'tax_id',
+    'country_id',
+    'address_id',
+    'post_address_id',
+    'contact',
+    'data_contract',
+    'ceo_name',
+    'cceo_name',
+    'cceo_contract_name',
+    'cceo_contract_date'
+  ];
 
   public function user(){
     return $this->belongsTo(User::class);
+  }
+  public function tax(){
+    return $this->belongsTo(Tax::class);
+  }
+  public function country(){
+    return $this->belongsTo(Country::class);
+  }
+  public function address(){
+    return $this->belongsTo(Address::class);
+  }
+  public function post_address(){
+    return $this->belongsTo(Address::class,'post_address_id');
   }
 }
