# routes/api.php
@@ -8,6 +8,8 @@ use App\Http\Controllers\Api\Addresses\AddressTypeController;
 use App\Http\Controllers\Api\Addresses\AddressController;
 use App\Http\Controllers\Api\Companies\CompanyController;
 use App\Http\Controllers\Api\Cars\CarTypeController;
+use App\Http\Controllers\Api\Taxes\TaxController;
+use App\Http\Controllers\Api\Countries\CountryController;
 use App\Http\Controllers\UserController;
 use App\Http\Controllers\OrderController;
 
@@ -35,5 +37,7 @@ Route::apiResource('containers', ContainerController::class);
 Route::apiResource('order-statuses', OrderStatusController::class);
 Route::apiResource('address-types', AddressTypeController::class);
 Route::apiResource('addresses', AddressController::class);
+Route::apiResource('taxes', TaxController::class);
+Route::apiResource('countries', CountryController::class);
 Route::apiResource('companies', CompanyController::class);
 Route::apiResource('car/types', CarTypeController::class);
